deploy/k8s/hvac-enze/0-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: hvac-enze
  name: hvac-enze
