deploy/k8s/hvac-enze/2-app.yaml
---
# quiz frontend service
apiVersion: v1
kind: Service
metadata:
  name: quiz
  namespace: hvac-enze
spec:
  ports:
    - name: "frontend"
      protocol: TCP
      port: 3000
      targetPort: 3000
  selector:
    app: quiz-frontend

---
# quiz frontend deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quiz-frontend-deploy
  namespace: hvac-enze
spec:
  replicas: 2
  selector:
    matchLabels:
      app: quiz-frontend
  template:
    metadata:
      labels:
        app: quiz-frontend
    spec:
      imagePullSecrets:
        - name: my-registry-secret
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                - key: arch
                  operator: In
                  values:
                    - arm64
      containers:
        - image: registry.idealz.io/quiz:app-latest
          imagePullPolicy: Always
          name: quiz-app
          ports:
            - containerPort: 3000
              protocol: TCP
      restartPolicy: Always
