deploy/k8s/hvac-enze/3-strapi.yaml
---
# strapi service
apiVersion: v1
kind: Service
metadata:
  name: strapi
  namespace: hvac-enze
spec:
  ports:
    - name: "backend"
      port: 1337
      targetPort: 1337
  selector:
    app: quiz-backend

---
# strapi deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quiz-backend-deploy
  namespace: hvac-enze
spec:
  replicas: 2
  selector:
    matchLabels:
      app: quiz-backend
  template:
    metadata:
      labels:
        app: quiz-backend
    spec:
      imagePullSecrets:
        - name: my-registry-secret
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                - key: arch
                  operator: In
                  values:
                    - arm64
      containers:
        - image: registry.idealz.io/quiz:strapi-latest
          imagePullPolicy: Always
          name: quiz-strapi
          ports:
            - containerPort: 1337
              protocol: TCP
#          args:
#            - npx
#            - strapi
#            - develop
      restartPolicy: Always
